--- a/app/homepage.html
+++ b/app/homepage.html
@@ -94,127 +94,132 @@
 
       </div>
     </div>
-    <div class="navbar-collapse collapse" id="content-nav">
-      <div class="container">
-        <ul class="nav navbar-nav navbar-center dropdown" >
-          <li id="nav-faculty">
-            <a class="mobile-header">ABOUT<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
-            <ul class="pushdown-menu">
-              <li><a href="/about">About</a></li>
-              <li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li>
-              <li><a href="/president/">Office of the President</a></li>
-              <li><a href="/trustees/">Board of Trustees</a></li>
-              <li><a href="/giving/">The MSU Denver Foundation</a></li>
-              <li><a href="/50/">Our Past</a></li>
-              <li><a href="/contact/">Questions / Comments</a></li>
-             </ul>
-           </li>
-           <li id="nav-admissions">
-             <a class="mobile-header">ADMISSIONS <span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
-             <ul class="pushdown-menu">
-               <li><a href="/admissions/">Admissions</a></li>
-               <li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li>
-               <li><a href="/admissions/apply/transfer/">Transfer Students</a></li>
-               <li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li>
-               <li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li>
-               <li><a href="/admissions/apply/internationalstudents/">International Students</a></li>
-               <li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li>
-               <li><a href="/admissions/apply/adultstudents/">Adult Students</a></li>
-               <li><a href="/admissions/apply/re-admit/">Re-Admit</a></li>
-               <li><a href="/admissions/apply/non-degree/">Non-Degree</a></li>
-               <li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li>
-               <li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li>
-             </ul>
-           </li>
-           <li id="nav-academics">
-             <a class="mobile-header">ACADEMICS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
-             <ul class="pushdown-menu">
-               <li><a href="/programs/">Academic Programs</a></li>
-               <li><a href="/las/">College of Letters, Arts and Sciences</a></li>
-               <li><a href="/cps/">College of Professional Studies</a></li>
-               <li><a href="/business/">College of Business</a></li>
-               <li><a href="/education/">School of Education</a></li>
-               <li><a href="/fys/">First Year Success</a></li>
-               <li><a href="">Learning Enrichment</a></li>
-               <li><a href="">Academic Support</a></li>
-               <li><a href="">Extended Campus</a></li>
-               <li><a href="">Online Courses</a></li>
-               <li><a href="/commencement/">Graduation/Commencement</a></li>
-             </ul>
-           </li>
-           <li id="nav-campus">
-             <a class="mobile-header">CAMPUS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
-             <ul class="pushdown-menu">
-               <li><a href="/campuslife/">Campus Life</a></li>
-               <li><a href="/studentactivities/">Student Activities</a></li>
-               <li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li>
-               <li><a href="/campuslife/involvementrecreation/">Involvement &amp; Recreation</a></li>
-               <li><a href="/studentengagementandwellness/">Student Engagement and Wellness</a></li>
-               <li><a href="/campuslife/studentpublications/">Student Media</a></li>
-               <li><a href="">Student Organizations</a></li>
-             </ul>
-           </li>
-           <li id="nav-alumni">
-             <a class="mobile-header">ALUMNI &#38; DONORS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
-             <ul class="pushdown-menu">
-               <li><a href="/alumni/">Alumni</a></li>
-               <li><a href="">Donors</a></li>
-               <li><a href="/alumni/careerservices/">Career Services</a></li>
-               <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
-               <li><a href="">MSU Denver Magazine</a></li>
-               <li><a href="/alumni/continuingeducation/">Continuing Education</a></li>
-               <li><a href="/alumni/studentalumniassociation/">Student Alumni Association</a></li>
-               <li><a href="">Alumni Events</a></li>
-             </ul>
-           </li>
-           <li id="nav-search"><div><span class="glyphicon glyphicon-search search-desktop"></span></div></li>
-    <!-- Hidden Search Bar-->
-          <form action="https://www.msudenver.edu/search">
-            <div id="search-input" class="inner-addon left-addon search-input-desktop" role="search" action="https://www.msudenver.edu/search">
-              <span class="glyphicon glyphicon-search glyphicon-opened"></span>
-              <input  id="q" name="q" type="text" class="home-input" placeholder="SEARCH MSU DENVER" tabindex="2"; style="margin-left: -3px; outline: none;";>
-          <!-- AUTO SUGGEST -->
-          <!-- Code auto suggest server by DEV, PROD, etc. -->
-              <div id="autoSuggestResults"></div>
-                      <!-- END AUTO SUGGEST -->
-              <div class="gobutton">
-                <a id="searchGoLink" class="disableGoButton">
-                  <button type="submit" class="button" id="qButton">SEARCH</button>
-                </a>
-              </div>
-              <span id="nav-search-close" class="glyphicon glyphicon-remove"></span>
-            </div> <!-- search-input -->
-          </form>
-        </ul>
-      </div>
-    </div>
-      <!--/.nav-collapse -->
-      <!-- mobile search-input -->
-      <form action="https://www.msudenver.edu/search">
-        <div id="" class="" role="search" action="https://www.msudenver.edu/search">
-                <div id="content-nav-mobile">
-                  <div id="search-input" class="inner-addon left-addon search-input-mobile">
-                      <span class="glyphicon glyphicon-search glyphicon-opened-mobile"></span>
-                            <input  id="q"
-                              name="q"
-                              type="text"
-                              class="home-input search-text-mobile"
-                              placeholder="SEARCH MSU DENVER"
-                              tabindex="2";
-                              style="margin-left: -3px; outline: none;";
-                             >
-                      <!-- AUTO SUGGEST -->
-                      <!-- Code auto suggest server by DEV, PROD, etc. -->
-                      <div id="autoSuggestResults"></div>
 
-                      <!-- END AUTO SUGGEST -->
-                  </div>
-                </div>
-        </div>
+</div>
+</div>
+
+<!-- ******START PUSHDOWN MENU AND SEARCH BAR ****** -->
+<div class="navbar-collapse collapse" id="content-nav">
+  <div class="container">
+    <ul class="nav navbar-nav navbar-center dropdown" >
+      <li id="nav-faculty">
+        <a class="mobile-header">ABOUT<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
+        <ul class="pushdown-menu">
+          <li><a href="/about">About</a></li>
+          <li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li>
+          <li><a href="/president/">Office of the President</a></li>
+          <li><a href="/trustees/">Board of Trustees</a></li>
+          <li><a href="/giving/">The MSU Denver Foundation</a></li>
+          <li><a href="/50/">Our Past</a></li>
+          <li><a href="/contact/">Questions / Comments</a></li>
+         </ul>
+       </li>
+       <li id="nav-admissions">
+         <a class="mobile-header">ADMISSIONS <span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
+         <ul class="pushdown-menu">
+           <li><a href="/admissions/">Admissions</a></li>
+           <li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li>
+           <li><a href="/admissions/apply/transfer/">Transfer Students</a></li>
+           <li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li>
+           <li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li>
+           <li><a href="/admissions/apply/internationalstudents/">International Students</a></li>
+           <li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li>
+           <li><a href="/admissions/apply/adultstudents/">Adult Students</a></li>
+           <li><a href="/admissions/apply/re-admit/">Re-Admit</a></li>
+           <li><a href="/admissions/apply/non-degree/">Non-Degree</a></li>
+           <li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li>
+           <li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li>
+         </ul>
+       </li>
+       <li id="nav-academics">
+         <a class="mobile-header">ACADEMICS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
+         <ul class="pushdown-menu">
+           <li><a href="/programs/">Academic Programs</a></li>
+           <li><a href="/las/">College of Letters, Arts and Sciences</a></li>
+           <li><a href="/cps/">College of Professional Studies</a></li>
+           <li><a href="/business/">College of Business</a></li>
+           <li><a href="/education/">School of Education</a></li>
+           <li><a href="/fys/">First Year Success</a></li>
+           <li><a href="">Learning Enrichment</a></li>
+           <li><a href="">Academic Support</a></li>
+           <li><a href="">Extended Campus</a></li>
+           <li><a href="">Online Courses</a></li>
+           <li><a href="/commencement/">Graduation/Commencement</a></li>
+         </ul>
+       </li>
+       <li id="nav-campus">
+         <a class="mobile-header">CAMPUS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
+         <ul class="pushdown-menu">
+           <li><a href="/campuslife/">Campus Life</a></li>
+           <li><a href="/studentactivities/">Student Activities</a></li>
+           <li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li>
+           <li><a href="/campuslife/involvementrecreation/">Involvement &amp; Recreation</a></li>
+           <li><a href="/studentengagementandwellness/">Student Engagement and Wellness</a></li>
+           <li><a href="/campuslife/studentpublications/">Student Media</a></li>
+           <li><a href="">Student Organizations</a></li>
+         </ul>
+       </li>
+       <li id="nav-alumni">
+         <a class="mobile-header">ALUMNI &#38; DONORS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
+         <ul class="pushdown-menu">
+           <li><a href="/alumni/">Alumni</a></li>
+           <li><a href="">Donors</a></li>
+           <li><a href="/alumni/careerservices/">Career Services</a></li>
+           <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
+           <li><a href="">MSU Denver Magazine</a></li>
+           <li><a href="/alumni/continuingeducation/">Continuing Education</a></li>
+           <li><a href="/alumni/studentalumniassociation/">Student Alumni Association</a></li>
+           <li><a href="">Alumni Events</a></li>
+         </ul>
+       </li>
+       <li id="nav-search"><div><span class="glyphicon glyphicon-search search-desktop"></span></div></li>
+<!-- Hidden Search Bar-->
+      <form action="https://www.msudenver.edu/search">
+        <div id="search-input" class="inner-addon left-addon search-input-desktop" role="search" action="https://www.msudenver.edu/search">
+          <span class="glyphicon glyphicon-search glyphicon-opened"></span>
+          <input  id="q" name="q" type="text" class="home-input" placeholder="SEARCH MSU DENVER" tabindex="2"; style="margin-left: -3px; outline: none;";>
+      <!-- AUTO SUGGEST -->
+      <!-- Code auto suggest server by DEV, PROD, etc. -->
+          <div id="autoSuggestResults"></div>
+                  <!-- END AUTO SUGGEST -->
+          <div class="gobutton">
+            <a id="searchGoLink" class="disableGoButton">
+              <button type="submit" class="button" id="qButton">SEARCH</button>
+            </a>
+          </div>
+          <span id="nav-search-close" class="glyphicon glyphicon-remove"></span>
+        </div> <!-- search-input -->
       </form>
-      <!-- end mobile search-input -->
+    </ul>
+  </div>
 </div>
-</div>
+  <!--/.nav-collapse -->
+  <!-- mobile search-input -->
+  <form action="https://www.msudenver.edu/search">
+    <div id="" class="" role="search" action="https://www.msudenver.edu/search">
+            <div id="content-nav-mobile">
+              <div id="search-input" class="inner-addon left-addon search-input-mobile">
+                  <span class="glyphicon glyphicon-search glyphicon-opened-mobile"></span>
+                        <input  id="q"
+                          name="q"
+                          type="text"
+                          class="home-input search-text-mobile"
+                          placeholder="SEARCH MSU DENVER"
+                          tabindex="2";
+                          style="margin-left: -3px; outline: none;";
+                         >
+                  <!-- AUTO SUGGEST -->
+                  <!-- Code auto suggest server by DEV, PROD, etc. -->
+                  <div id="autoSuggestResults"></div>
+
+                  <!-- END AUTO SUGGEST -->
+              </div>
+            </div>
+    </div>
+  </form>
+  <!-- end mobile search-input -->
+<!-- ****** END PUSHDOWN MENU AND SEARCH BAR ****** -->
+
 
 <script type="text/javascript">
 $('#q').keyup(function () {
