--- a/app/homepage.html
+++ b/app/homepage.html
@@ -219,6 +219,18 @@
   </form>
   <!-- end mobile search-input -->
 <!-- ****** END PUSHDOWN MENU AND SEARCH BAR ****** -->
+<div class="nav container navbar-inner">
+    <li><a><div class="col-xs-4">
+        STUDENT HUB
+      </div></a></li>
+    <li><a><div class="col-xs-4">
+        FACULTY & STAFF
+      </div></a></li>
+    <li><a><div class="col-xs-4">
+        ATHLETICS
+      </div></a></li>
+</div>
+
 
 
 <script type="text/javascript">
