--- a/app/homepage.html
+++ b/app/homepage.html
@@ -101,9 +101,9 @@
 <!-- ******START PUSHDOWN MENU AND SEARCH BAR ****** -->
 <div class="navbar-collapse collapse" id="content-nav">
   <div class="container">
-    <ul class="nav navbar-nav navbar-center dropdown" >
+    <ul class="nav navbar-nav navbar-center dropdown" id="nav-middle">
       <li id="nav-faculty">
-        <a class="mobile-header">ABOUT<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
+        <a class="mobile-header">About<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
         <ul class="pushdown-menu">
           <li><a href="/about">About</a></li>
           <li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li>
@@ -115,7 +115,7 @@
          </ul>
        </li>
        <li id="nav-admissions">
-         <a class="mobile-header">ADMISSIONS <span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
+         <a class="mobile-header">Admissions <span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
          <ul class="pushdown-menu">
            <li><a href="/admissions/">Admissions</a></li>
            <li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li>
@@ -132,7 +132,7 @@
          </ul>
        </li>
        <li id="nav-academics">
-         <a class="mobile-header">ACADEMICS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
+         <a class="mobile-header">Academics<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
          <ul class="pushdown-menu">
            <li><a href="/programs/">Academic Programs</a></li>
            <li><a href="/las/">College of Letters, Arts and Sciences</a></li>
@@ -148,7 +148,7 @@
          </ul>
        </li>
        <li id="nav-campus">
-         <a class="mobile-header">CAMPUS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
+         <a class="mobile-header">Campus<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
          <ul class="pushdown-menu">
            <li><a href="/campuslife/">Campus Life</a></li>
            <li><a href="/studentactivities/">Student Activities</a></li>
@@ -160,7 +160,7 @@
          </ul>
        </li>
        <li id="nav-alumni">
-         <a class="mobile-header">ALUMNI &#38; DONORS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
+         <a class="mobile-header menu-last">Alumni &#38; Donors<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
          <ul class="pushdown-menu">
            <li><a href="/alumni/">Alumni</a></li>
            <li><a href="">Donors</a></li>
@@ -219,16 +219,16 @@
   </form>
   <!-- end mobile search-input -->
 <!-- ****** END PUSHDOWN MENU AND SEARCH BAR ****** -->
-<div class="row navbar-lower">
-<div class="container navbar-lower toolbar">
-    <div class="col-xs-4">
-        STUDENT HUB
+<div class="navbar-lower">
+<div class="container navbar-lower">
+    <div class="col-xs-4"><a href="http://msudenver.edu/studenthub">
+        Student Hub</a>
     </div>
-    <div class="col-xs-4">
-        FACULTY & STAFF
+    <div class="col-xs-4"><a href="http://msudenver.edu/facstaff">
+        Faculty &#38; Staff</a>
     </div>
-    <div class="col-xs-4">
-        ATHLETICS
+    <div class="col-xs-4"><a href="http://gometrostate.com/">
+        Athletics</a>
     </div>
 </div>
 </div>
