--- a/app/homepage.html
+++ b/app/homepage.html
@@ -87,9 +87,9 @@
         <div class="col-xs-8">
           <img class="msudenver_logo" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Logo">
         </div>
-        <div class="col-xs-1 apply-button">APPLY</div>
-        <div class="col-xs-1 apply-button give-visit-buttons">GIVE</div>
-        <div class="col-xs-1 apply-button give-visit-buttons">VISIT</div>
+        <a href="http://msudenver.edu/admissions"><div class="col-xs-1 apply-button">APPLY</div></a>
+        <a href="http://msudenver.edu/alumni/give/"><div class="col-xs-1 apply-button give-visit-buttons">GIVE</div></a>
+        <a href="https://msudenver.edu/visit/"><div class="col-xs-1 apply-button give-visit-buttons">VISIT</div></a>
         <span class="glyphicon glyphicon-search glyphicon-search-mobile"></span>
 
       </div>
@@ -144,7 +144,7 @@
            <li><a href="">Academic Support</a></li>
            <li><a href="">Extended Campus</a></li>
            <li><a href="">Online Courses</a></li>
-           <li><a href="/commencement/">Graduation/Commencement</a></li>
+           <li><a href="/commencement/">Graduation/ Commencement</a></li>
          </ul>
        </li>
        <li id="nav-campus">
@@ -154,7 +154,7 @@
            <li><a href="/studentactivities/">Student Activities</a></li>
            <li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li>
            <li><a href="/campuslife/involvementrecreation/">Involvement &amp; Recreation</a></li>
-           <li><a href="/studentengagementandwellness/">Student Engagement and Wellness</a></li>
+           <li><a href="/studentengagementandwellness/">Student Engagement &#38; Wellness</a></li>
            <li><a href="/campuslife/studentpublications/">Student Media</a></li>
            <li><a href="">Student Organizations</a></li>
          </ul>
