--- a/app/homepage.html
+++ b/app/homepage.html
@@ -285,6 +285,9 @@ $('.search-text-mobile').focusout(function () {
     <!-- *********************************  -->
 
 
+<div w3-include-html="htmlcomponents/Home-PageHero.html"></div>
+<div w3-include-html="htmlcomponents/Home-RunRoad.html"></div>
+<div w3-include-html="htmlcomponents/Home-Stories.html"></div>
 
 
 
