--- a/app/htmlcomponents/Home-RunRoad.html
+++ b/app/htmlcomponents/Home-RunRoad.html
@@ -1,1 +1,16 @@
 <!-- RUN YOUR OWN ROAD -->
+<section id="ryor-ad">
+  <div class="container-fluid">
+    <div class="row col-xs-12">
+      <div class="col-xs-6">
+        <img class="img-responsive" src="http://placehold.it/160X250">
+      </div>
+        <div class="col-xs-6 margin-top: 4em;">
+          <h5>student name goes here</h5>
+          <h6>student class affiliation goes here</h6>
+          <h6>student description goes here</h6>
+          <button>FULL STORY</button>
+        </div>
+    </div>
+  </div>
+</section>
