--- a/app/htmlcomponents/Home-RunRoad.html
+++ b/app/htmlcomponents/Home-RunRoad.html
@@ -3,14 +3,16 @@
   <div class="container-fluid">
     <div class="row col-xs-12">
       <div class="col-xs-6">
-        <img class="img-responsive" src="http://placehold.it/160X250">
+        <img class="img-responsive" src="http://placehold.it/800X500">
       </div>
-        <div class="col-xs-6 margin-top: 4em;">
+        <div class="col-xs-6">
           <h5>student name goes here</h5>
           <h6>student class affiliation goes here</h6>
           <h6>student description goes here</h6>
-          <button>FULL STORY</button>
+          <button class="btn" type="button">FULL STORY</button>
         </div>
     </div>
   </div>
 </section>
+
+<!-- RUN YOUR OWN ROAD ends here -->
