--- a/app/htmlcomponents/Home-Stories.html
+++ b/app/htmlcomponents/Home-Stories.html
@@ -1,1 +1,20 @@
 <!-- PRESSPAGE Stories -->
+<section id="stories">
+  <div class="container-fluid">
+    <div class="col-xs-12">
+      <h5>TRANSFORMING LIVES. IMPACTING THE WORLD.</h5>
+      <h6>For more than 50 years, MSU Denver has transformed lives. Our students, educators, and alumni are making a difference in our community and across the globe.</h6>
+    </div>
+    <div class="col-xs-12">
+      <img class="img-responsive" src="http://placehold.it/400x300">
+    </div>
+    <div class="col-xs-12">
+      <img class="img-responsive" src="http://placehold.it/400x300">
+    </div>
+    <div class="col-xs-12">
+      <img class="img-responsive" src="http://placehold.it/400x300">
+    </div>
+    <button class="btn" type="button"><h6>READ MORE ROADRUNNER STORIES</h6></button>
+  </div>
+</section>
+<!-- PRESSPAGE Stories ENDS HERE -->
