--- a/development/terminalfour/src/html/newsroom.html
+++ b/development/terminalfour/src/html/newsroom.html
@@ -12,9 +12,8 @@
    <script src="style-assets/lib/jquery/jquery.min.js"></script>
 </head>
     <body>
-        @@include('header.html')
-        @@include('topnavigation.html')
-
+        
+        @@include('newsroomHomepageIncludes/newsroomNav.html')
           <!-- newsroom includes go here -->
           @@include('newsroomHomepageIncludes/newsroomHomepageHero.html')
 
