--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -12,165 +12,60 @@
    <script src="style-assets/lib/jquery/jquery.min.js"></script>
 </head>
     <body>
-        <!-- Global Header -->
-<a href="#content" class="skip-content">Skip to main content</a>
-<header>
-   <div class="navbar-fixed-top ">
-      <div class="" style="background-image:url(https://msudenver.edu/media/newsiteassets/images/header_asphalt.png); background-size: 100%;" alt="Asphalt Image">
-         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-         <span class="sr-only">Toggle quick links navigation</span>
-         <span class="fa fa-bars"></span>
-         </button>
-         <div class="row container-fluid">
-            <div class="col-xs-8">
-               <a href="/"> <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage"> </a>
-            </div>
-         </div>
-      </div>
-      <nav class="navbar nav-header">
-         <!-- Brand and toggle get grouped for better mobile display -->
-         <!-- Collect the nav links, forms, and other content for toggling -->
-         <div class="" id="bs-example-navbar-collapse-1">
-           <div class="collapse navbar-collapse">
-               <a href="/visit" type="button" class="btn btn-default visit-give-mobile">Visit</a>
-               <a href="/giving" type="button" class="btn btn-default visit-give-mobile give-mobile ">Give</a>
-               <a href="/admissions" type="button" class="btn btn-default apply-mobile">Apply</a>
-           </div>
-            <ul id="menu-nav" class="nav navbar-nav">
-              <li class="collapse navbar-collapse">
-
-                 <ul class="fac-staf-stu-mobile">
-                    <li><a href="/studenthub">Current Students</a></li>
-                    <li class="hide-pipe">|</li>
-                    <li><a href="/facstaff">Faculty &amp; Staff</a></li>
-                 </ul>
-              </li>
-               <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="/about">About MSU Denver</a></li>
-                    <li><a href="/about/strategicplan2020">Strategic Plan 2020</a></li>
-                    <li><a href="/president">Office of the President</a></li>
-                    <li><a href="/trustees">Board of Trustees</a></li>
-                    <li><a href="/eoo">Office of Equal Opportunity</a></li>
-                    <li><a href="/our-past">Our Past</a></li>
-                    <li><a href="/contact">Questions / Comments</a></li>
-                    <li><a href="/commencement">Graduation / Commencement</a></li>
-                    <li><a href="/a-to-z/">A to Z</a></li>
-                  </ul>
-               </li>
-               <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Prospective Students <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="/admissions">Admissions</a></li>
-                    <li><a href="/admissions/student-types/first-timeundergraduate/">First-Time Undergraduate</a></li>
-                    <li><a href="/admissions/student-types/transfer">Transfer Students</a></li>
-                    <li><a href="/admissions/student-types/adultstudents">Adult Students</a></li>
-                    <li><a href="/admissions/student-types/masters">Master&rsquo;s Programs</a></li>
-                    <li><a href="/admissions/student-types/militaryveteran">Military Veterans</a></li>
-                    <li><a href="/admissions/student-types/internationalstudents">International Students</a></li>
-                    <li><a href="/admissions/student-types/re-admit">Re-Admit</a></li>
-                    <li><a href="/admissions/student-types/non-degree">Non-Degree</a></li>
-                    <li><a href="/admissions/student-types/concurrentlyenrolled">Concurrently Enrolled</a></li>
-                    <li><a href="/cost">Cost</a></li>
-                  </ul>
-               </li>
-               <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="/academics/">Academics Overview</a></li>
-                    <li><a href="/programs/">Academic Programs</a></li>
-                    <li><a href="/academics/schedulescalendarscatalogs/">Schedules, Calendars &amp; Catalogs</a></li>
-                    <li><a href="/las/">College of Letters, Arts &amp; Sciences</a></li>
-                    <li><a href="/cps/">College of Professional Studies</a></li>
-                    <li><a href="/business/">College of Business</a></li>
-                    <li><a href="/education/">School of Education</a></li>
-                    <li><a href="/fys/">First Year Success</a></li>
-                    <li><a href="/campuslife/academicsupport">Academic Support</a></li>
-                    <li><a href="/online/">Online Courses</a></li>
-                    <li><a href="/innovative-lifelong-learning/">Innovative and Lifelong Learning</a></li>
-                    <li><a href="/academics/specialprograms">Special Programs</a></li>
-                    <li><a href="/studentengagementandwellness">Student Engagement &amp; Wellness</a></li>
-                  </ul>
-               </li>
-               <li class="dropdown collapse navbar-collapse">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Alumni and Friends <i role="presentation" class="fa fa-angle-down fa-lg"></i></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="/alumni/">Alumni &amp; Friends Home</a></li>
-                    <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
-                    <li><a href="/alumni/getinvolved/">Get Involved</a></li>
-                    <li><a href="/alumni/lifelonglearning/">Lifelong Learning</a></li>
-                    <li><a href="/alumni/events">Alumni Events</a></li>
-                    <li><a href="/alumni/alumniassociation/">Alumni Association</a></li>
-                    <li><a href="/alumni/alumnimagazine/">MSU Denver Magazine</a></li>
-                    <li><a href="/alumni/contactus/">Contact Alumni &amp; Friends</a></li>
-                  </ul>
-               </li>
-               <li class="dropdown collapse navbar-collapse dropdown-last">
-                  <a href="http://roadrunnersathletics.com"  role="button">Athletics </a>
-               </li>
-               <li id="nav-search" type="button">
-                 <a href="#" data-toggle="modal" data-target="#searchModal">
-                   <label for="nav-search" class="sr-only">Search MSU Denver dot e d u</label>
-                   <span class="search-button-text">SEARCH   </span><span class="fa fa-search search-desktop"></span>
-                 </a>
-               </li>
-            </ul>
-         </div>
-         <!-- /.navbar-collapse -->
-      </nav>
-   </div>
-</header>
-<!-- Button trigger modal -->
-<!-- Modal -->
-<div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel">
-  <h4 class="modal-title" id="searchModalLabel">Search MSU Denver</h4>
-   <div class="modal-dialog" role="document">
-      <div class="modal-content">
-         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">close search  <b>&times;</b></span></button>
-         </div>
-         <div class="modal-body">
-            <form action="https://www.msudenver.edu/search" aria-label="search">
-               <div class="form-group" aria-label="search">
-                  <input type="text" class="form-control" placeholder="Search MSU Denver...">
-               </div>
-               <button type="submit" class="fa fa-search submit-desktop" aria-label="submit search"></button>
-            </form>
-         </div>
-         <!-- <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-         </div> -->
-      </div>
-   </div>
-</div>
-
-<!-- allow mobile menu dropdown to scroll -->
-<script>
-$('#bs-example-navbar-collapse-1').css('max-height',$(window).height()-79);
-</script>
-
-<script>
-// scrollTop function
-$(window).scroll(function(){
-  var width_threshold = 900;
-  var href = document.location.href;
-  var position = $(window).scrollTop();
-  var width     =  $(window).width();
-  $(".header-fluid").removeClass("header-fluid-change");
-  $(".msudenver_logo").removeClass("msudenver_logo_change");
-
-
-  if( position > 15 && width > width_threshold) {
-    $(".header-fluid").toggleClass("header-fluid-change");
-    $(".msudenver_logo").toggleClass("msudenver_logo_change");
-  }
-
-});
-</script>
-
         
+        <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
           <!-- newsroom includes go here -->
           <div class="container">
 	<div class="row">
