--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -40,10 +40,16 @@
           <li><a href="#" class="underline-link">Trending Topics</a></li>
         </ul>
         <form class="navbar-form navbar-right">
-          <div class="form-group">
+          <!-- <div class="form-group">
             <input type="text" class="form-control" placeholder="Search">
           </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default">Submit</button> -->
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search for...">
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="button">Go!</button>
+            </span>
+          </div><!-- /input-group -->
         </form>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
