--- a/development/terminalfour/src/html/newsroom.html
+++ b/development/terminalfour/src/html/newsroom.html
@@ -2,7 +2,8 @@
 <html lang="en-US">
 <head>
    <meta charset="UTF-8">
-   <meta name="viewport" content="initial-scale=1">
+
+   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
    <title>MSU Denver - Homepage</title>
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
@@ -18,7 +19,7 @@
 
         <!-- newsroom includes go here -->
         @@include('newsroomHomepageIncludes/newsroomHomepageHero.html')
-        
+
         <!-- footer includes -->
 
 
