--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -2,7 +2,8 @@
 <html lang="en-US">
 <head>
    <meta charset="UTF-8">
-   <meta name="viewport" content="initial-scale=1">
+
+   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
    <title>MSU Denver - Homepage</title>
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
@@ -14,7 +15,7 @@
     <body style="padding-top: 0px;">
         
         <!-- header includes -->
-        <div clas="top-banner">
+        <div class="top-banner">
   <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
 </div>
 <nav class="navbar navbar-default">
@@ -62,7 +63,7 @@
 		<h2>Hello World! (newsroom)</h2>
 	</div>
 </div>
-        
+
         <!-- footer includes -->
 
 
